--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
-[submodule "CPEN311-Baccarat"]
-	path = CPEN311-Baccarat
-	url = https://github.com/Haxrox/CPEN311-Baccarat
-[submodule "CPEN311-Realeux-Triangle"]
-	path = CPEN311-Realeux-Triangle
-	url = https://github.com/Haxrox/CPEN311-Realeux-Triangle
-[submodule "CPEN311-MNIST-Hardware-Accelerator"]
-	path = CPEN311-MNIST-Hardware-Accelerator
-	url = https://github.com/Haxrox/CPEN311-MNIST-Hardware-Accelerator
-[submodule "CPEN311-Arc4-Cipher"]
-	path = CPEN311-Arc4-Cipher
-	url = https://github.com/Haxrox/CPEN311-Arc4-Cipher
+[submodule "Baccarat"]
+	path = Baccarat
+	url = https://github.com/Haxrox/Baccarat
+[submodule "Realeux-Triangle"]
+	path = Realeux-Triangle
+	url = https://github.com/Haxrox/Realeux-Triangle
+[submodule "MNIST-Hardware-Accelerator"]
+	path = MNIST-Hardware-Accelerator
+	url = https://github.com/Haxrox/MNIST-Hardware-Accelerator
+[submodule "ARC4-Cipher"]
+	path = ARC4-Cipher
+	url = https://github.com/Haxrox/ARC4-Cipher
 [submodule "Realeux-Triangle-Reference-Model"]
 	path = Realeux-Triangle-Reference-Model
 	url = https://github.com/Haxrox/Realeux-Triangle-Reference-Model
